Changed GlobalHotkey structure

--- a/JUtils/MainWindow.xaml
+++ b/JUtils/MainWindow.xaml
@@ -18,7 +18,7 @@
         <TextBlock Name="tbHellow" Text="Hello world"/>
         <ListView Grid.Column="2" Name="LVhotkeys"></ListView>
         <Button Name="btnRun" Width="100" Height="25" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Run" Click="btnRun_Click"/>
-        <TextBlock Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Enter hotkey..." Name="tbMicToggle" DataContextChanged="TextBlock_DataContextChanged"/>
+        <TextBox Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Name="tbMicToggle" Width="150" Height="50" KeyDown="tbMicToggle_KeyDown"/>
 
     </Grid>
 </Window>
