--- a/JUtils/MainWindow.xaml
+++ b/JUtils/MainWindow.xaml
@@ -17,8 +17,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <TextBlock Name="tbHellow" Text="Hello world"/>
-        <ListView Grid.Column="2" Name="LVhotkeys"></ListView>
-        <Button Name="btnRun" Width="100" Height="25" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Run" Click="btnRun_Click"/>
-        <view:HotkeyPicker x:Name="hkp_MicToggle" Grid.Row="2" Width="250" Height="40" VerticalAlignment="Center"/>
+        <Button Name="btnSave" Width="100" Height="25" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Run" Click="btnSave_Click"/>
+        <view:HotkeyPicker x:Name="hkp_MicToggle" Grid.Row="0" Width="250" Height="40" VerticalAlignment="Center"/>
     </Grid>
 </Window>
