--- a/JUtils/MainWindow.xaml
+++ b/JUtils/MainWindow.xaml
@@ -3,34 +3,54 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:JUtils"
         xmlns:view="clr-namespace:JUtils.view"
         mc:Ignorable="d"
-        WindowStyle="None" 
+        WindowStyle="None"
         Title="MainWindow" Height="450" Width="800">
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="0" CornerRadius="17" CaptionHeight="0" />
+        <WindowChrome GlassFrameThickness="0" CornerRadius="30" CaptionHeight="0" />
     </WindowChrome.WindowChrome>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.15625*"/>
             <ColumnDefinition Width="0.84375*"/>
         </Grid.ColumnDefinitions>
-        <view:TitleBar Grid.ColumnSpan="2" Height="30" VerticalAlignment="Top" Panel.ZIndex="1"/>
-        <Rectangle Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="#222222"/>
+        <view:TitleBar Grid.Column="0" Grid.ColumnSpan="2" Height="30" Margin="0,1,1,0" VerticalAlignment="Top" Panel.ZIndex="1"/>
+        <Rectangle Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch" Fill="#222222" />
         <view:SideBar Grid.Column="0" />
+        
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="80"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" CornerRadius="15,0,0,15" BorderThickness="1" Background="White" />
-            <TextBlock Text="MicToggle" Grid.Column="1" Grid.Row="0" FontSize="32" VerticalAlignment="Top" Margin="20,9,0,0" Grid.ColumnSpan="2"/>
-        <TextBlock Grid.Column="1" Grid.Row="0"  FontSize="16" Text="A Hotkey to toggle mute your Mic. Windows wide!" VerticalAlignment="Bottom" Margin="20,0,0,5" Grid.ColumnSpan="2"/>
-        <Separator Grid.Column="1" Grid.Row="0"  VerticalAlignment="Bottom" Grid.ColumnSpan="2" Margin="0,0,0,2"/>
-        <view:HotkeyPicker x:Name="hkp_MicToggle" Grid.Row="1" Grid.Column="1" Width="250" Height="40" VerticalAlignment="Center" Margin="243,0,231,0"/>
-        <Button Name="btnSave" Width="100" Height="25" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Run" Click="btnSave_Click" Margin="317,0,0,0"/>
+            <Border Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" CornerRadius="20,0,0,20" BorderThickness="0" Background="White" />
+            
+            <Grid Grid.Row="1" Margin="30,0,30, 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="160"/>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                
+                <TextBlock Grid.Row="0" Text="MicToggle" FontSize="32" VerticalAlignment="Top"/>
+                <TextBlock Grid.Row="0" FontSize="16" Text="A Hotkey to toggle mute your Mic. Windows wide!" VerticalAlignment="Bottom"/>
+            
+                <view:HotkeyPicker x:Name="HkpMicToggle" Grid.Row="1" Width="250" MinHeight="30" Height="Auto" VerticalAlignment="Center" HorizontalAlignment="Left" />
+                
+            </Grid>
+            
+            
+        <Button Grid.Row="2" Width="75" Height="30" Background="#0085FF" VerticalAlignment="Top"
+                HorizontalAlignment="Right" Content="Save" Click="btnSave_Click" Margin="0,0,30,0">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Button.Resources>
+        </Button>
         </Grid>
     </Grid>
 </Window>
